--- a/.github/workflows/telegramNotify.yml
+++ b/.github/workflows/telegramNotify.yml
@@ -12,4 +12,4 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        args: Repository updated!
+        args: Repository updated! ${{ GITHUB_REPOSITORY }}  - event: ${{ github.event_name }}
