--- a/.github/workflows/telegramNotify.yml
+++ b/.github/workflows/telegramNotify.yml
@@ -12,4 +12,10 @@ jobs:
       with:
         to: ${{ secrets.TELEGRAM_TO }}
         token: ${{ secrets.TELEGRAM_TOKEN }}
-        args: The ${{ github.event_name }} event triggered on repo ${{ repo }} on path ${{ github.event.path }}
+        message: |
+          The ${{ github.event_name }} event triggered second step.
+          show the github variable ref: ${{ github.ref }}
+          show the github variable commit: ${{ github.sha }}
+          show the github variable ref: {{ commit.ref }}
+          show the github variable commit: {{ commit.sha }}
+          Commit Message: ${{ github.event.head_commit.message }}
