--- a/.github/workflows/telegramNotify.yml
+++ b/.github/workflows/telegramNotify.yml
@@ -14,5 +14,5 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         format: html
         message: |
-          ⚡️ <a href="https://github.com/paradoxxl/gomastermind/commit/${{ github.event.push.after }}">Commits</a> pushed to master by <em>${{ github.event.push.pusher.name }}</em> ⚡️
-          ${{ github.actor }}:${{ github.event.head_commit.message }}
+          ⚡️ <a href="https://github.com/paradoxxl/gomastermind/commit/${{ github.sha }}">Updated version available</a> Responsible <em>${{ github.event.push.pusher.name }}</em> ⚡️
+          ${{ github.actor }} Commit message ${{ github.event.head_commit.message }}
