--- a/.github/workflows/telegramNotify.yml
+++ b/.github/workflows/telegramNotify.yml
@@ -14,6 +14,6 @@ jobs:
         token: ${{ secrets.TELEGRAM_TOKEN }}
         format: html
         message: |
-          ⚡️ <em> <a href="https://github.com/paradoxxl/gomastermind">Repo updated by</a> ${{ github.event.push.pusher.name }}</em> ⚡️
-          ${{ github.actor }} commit message ${{ github.event.head_commit.message }}
-          Go to commit <a href="https://github.com/paradoxxl/gomastermind/commit/${{ github.sha }}">here</a>
+          ⚡️ <em> <a href="https://github.com/paradoxxl/gomastermind">Repo updated by</a> ${{ github.actor }}</em> ⚡️ 
+          commit message is ${{ github.event.head_commit.message }}
+          Go to commit directly <a href="https://github.com/paradoxxl/gomastermind/commit/${{ github.sha }}">here</a>
